--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
   <header></header>
 
   <!-- 홍길동 -->
-  <section class="features"></section>
+  <section class="features">
+    <h2>Features</h2>
+  </section>
   <!-- //홍길동 -->
 
   <!-- 이도령 -->
