--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
   <!-- 김사또 -->
   <section class="news"></section>
   <!-- //김사또 -->
-  <footer></footer>
+  <footer>
+    <h1>footer title</h1>
+  </footer>
 </body>
 </html>
